--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 
         <div class="red-panda">
             <!-- 插入照片元素 -->
+            <picture>
+                <source media="(max-width:600px)" srcset="red-panda-600.jpg">
+                <source media="(max-width:1200px)" srcset="red-panda-1200.jpg">
+                <img src="red-panda.jpg" alt="red pander">
+            </picture>
         </div>
 
     </main>
